--- a/reactApp/src/App.css
+++ b/reactApp/src/App.css
@@ -13,11 +13,11 @@
   }
 }
 
-.Graph-playground-div {
+.graph-playground-div {
   max-width: 1000px; 
   margin: 0 auto;
   padding: 100px; 
-  height: 50%;
+  height: 100%;
 }
 
 .App-header {
